--- a/fly.toml
+++ b/fly.toml
@@ -14,11 +14,15 @@ console_command = "php /var/www/html/artisan tinker"
 
 [env]
   APP_ENV = "production"
+  APP_URL = "https://pandatest.fly.dev"
   LOG_CHANNEL = "stderr"
   LOG_LEVEL = "info"
   LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
   SESSION_DRIVER = "cookie"
   SESSION_SECURE_COOKIE = "true"
+  DB_CONNECTION = "mysql"
+  DB_HOST = "waw.pandamysql.internal"
+  DB_DATABASE= "some_db"
 
 [http_service]
   internal_port = 8080
