--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "mailgun/mailgun-php": "^4.0",
         "nyholm/psr7": "^1.8",
-        "symfony/http-client": "^6.4"
+        "symfony/http-client": "^6.4",
+        "symfony/mailgun-mailer": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
